# tacky-borders

./: Cargo.toml  How to Use + Info.txt  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
Counter Clockwise Spirals/Default Speed Variations/Purple & Green Spiral/: config.yaml
Counter Clockwise Spirals/Default Speed Variations/Red & Dark Blue Violet Spiral/: config.yaml
Counter Clockwise Spirals/Slower Speed Variations/Black & Dark Blue Violet Spiral/: config.yaml
Counter Clockwise Spirals/Slower Speed Variations/Black & Minty Green Spiral/: config.yaml
Counter Clockwise Spirals/Slower Speed Variations/Black & Purple Spiral/: config.yaml
Counter Clockwise Spirals/Slower Speed Variations/Black & Red Spiral/: config.yaml
Counter Clockwise Spirals/Slower Speed Variations/x Rainbow Spiral x/: config.yaml
color-presets/: Color Map.txt  How to Use + Info.txt
color-presets/Clockwise Spirals/Default Speed Variations/Black & Blue Spiral/: config.yaml
color-presets/Clockwise Spirals/Default Speed Variations/Black & Dark Blue Violet Spiral/: config.yaml
color-presets/Clockwise Spirals/Default Speed Variations/Black & Green Spiral/: config.yaml
color-presets/Clockwise Spirals/Default Speed Variations/Black & Minty Green Spiral/: config.yaml
color-presets/Gradient Colors/Blue & Red Gradient/: config.yaml
color-presets/Gradient Colors/Blue & Turquoise Gradient/: config.yaml
color-presets/Gradient Colors/Dark Violet & Red Gradient/: config.yaml
color-presets/Gradient Colors/Pink & Green Gradient/: config.yaml
color-presets/Gradient Colors/Pink & Minty Green Gradient/: config.yaml
color-presets/Gradient Colors/Purple & Green Gradient/: config.yaml
color-presets/Gradient Colors/Purple & Minty Green Gradient/: config.yaml
color-presets/Gradient Colors/Purple & Pink Gradient/: config.yaml
color-presets/Gradient Colors/Red & Dark Blue Violet Gradient/: config.yaml
color-presets/Gradient Colors/Red & Pink Gradient/: config.yaml
color-presets/Gradient Colors/Red & Purple Gradient/: config.yaml
color-presets/Gradient Colors/x Purple Dark BlueViolet Red Pink Gradient x/: config.yaml
color-presets/Gradient Colors/x Rainbow Gradient x/: config.yaml
color-presets/Static Colors/Black/: config.yaml
color-presets/Static Colors/Blue/: config.yaml
color-presets/Static Colors/Dark Blue Violet/: config.yaml
color-presets/Static Colors/Dark Magenta/: config.yaml
color-presets/Static Colors/Dark Violet/: config.yaml
color-presets/Static Colors/Green/: config.yaml
color-presets/Static Colors/Minty Green/: config.yaml
color-presets/Static Colors/Pink/: config.yaml
color-presets/Static Colors/Purple/: config.yaml
color-presets/Static Colors/Red/: config.yaml
color-presets/Static Colors/Torquoise/: config.yaml
color-presets/Static Colors/White/: config.yaml
src/: anim_timer.rs  animation_manager.rs  animations.rs  auto_start.rs  border.rs  border_config.rs  border_drawer.rs  colors.rs  config.rs  drawer.rs  effects.rs  event_hook.rs  iocp.rs  ipc.rs  komorebi.rs  lib.rs  main.rs  multimedia_timer.rs  render_backend.rs  render_resources.rs  sys_tray_icon.rs  theme.rs  utils.rs  window_border - with timer.rs  window_border.rs  windows_api.rs
src/resources/: config.yaml  credits.txt  icon.ico~  icon.png~
tests/: render_tests.rs  socket_tests.rs  window_tests.rs
(+91 files in other folders)
