[package]
name = "tacky-borders"
version = "1.3.1"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_yml = "0.0.12"
serde_json = "1.0.141"
serde_json_borrow = "0.8.0"
tray-icon = "0.21.0"
open = "5.3.2"
dirs = "6.0.0"
regex = "1.11.1"
log = "0.4.27"
sp_log = "0.2.1"
anyhow = "1.0.98"
windows-numerics = "0.2.0"

[dependencies.windows]
version = "0.61.3"
features = [
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_WindowsAndMessaging",
  "Wdk_System_SystemServices",
]

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
winres = "0.1.12"
